refining code during writing